[package]
name = "gotham_middleware_aws_sig_verify"
version = "0.2.0"
authors = ["David Cuthbert <dacut@kanga.org>"]
description = "Gotham middleware for AWS SigV4 verification"
keywords = ["AWS", "Amazon", "Gotham"]
homepage = "https://github.com/dacut/gotham-middleware-aws-sig-verify"
repository = "https://github.com/dacut/gotham-middleware-aws-sig-verify"
edition = "2018"
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
gotham-04 = ["aws_sig_verify/ring-014", "futures/use_std"]
default = ["gotham-04"]

[dependencies]
aws_sig_verify = "^0.5"
chrono = "^0.4"
futures = "^0.1.29"
hyper = "^0.12"
http = "^0.1.17"
gotham = "^0.4"

[dev-dependencies]
ring = ">=0.14"
